Fix sidebar css to not cover whole map with invisible area

--- a/src/views/Sidebar/Sidebar.css
+++ b/src/views/Sidebar/Sidebar.css
@@ -2,4 +2,9 @@
     height: 100%;
     max-width: 400px;
     background-color: white;
+    margin: 0;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    top: 64px;
 } 
